# rate_limiter

./: README.md  main.py  pyproject.toml
openspec/: project.md
openspec/changes/archive/2026-01-15-add-fixed-window-rate-limiter/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-15-add-fixed-window-rate-limiter/specs/rate-limiting/: spec.md
openspec/changes/archive/2026-01-15-add-health-check-endpoint/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-15-add-health-check-endpoint/specs/health-check/: spec.md
openspec/specs/health-check/: spec.md
openspec/specs/rate-limiting/: spec.md
src/: config.py  main.py
src/application/: __init__.py  health_check.py  rate_limit.py
src/domain/: __init__.py  health.py  rate_limit.py
src/infrastructure/: __init__.py  redis_client.py
src/interface/: web_app.py
tests/application/: test_health_check.py  test_rate_limit_use_case.py
tests/domain/: test_health.py  test_rate_limit.py
tests/infrastructure/: test_redis_client.py
tests/interface/: test_web_app.py
