[project]
name = "rate-limiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "redis>=7.1.0",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 79

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
pythonpath = "src"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
